# Mais-Aquivos-2024

./: .gitignore  Oscomps.woa.xml  README.md  Snapshot-2025-04-19.md  ai_project_agent.py  pyproject.toml  requirements-test.txt
.github/: Json  dependabot.yml
.github/ISSUE_TEMPLATE/: Contributors.md  Resources.md  Test_cases.md  Todo.md  dependencies_list.md
.snapshots/: .Eslintrc.js  .dockerignore  .editorconfig  .eslintrc.json  .gitattributes  .npmrc  .stylelintrc  Cmakelists.txt  Composer.Json  Gemfile  Generate_pycache.py  Gradle.Properties  Makefile  Package.json  Pipfile  Pom.xml  Requirements.txt  Settings.gradle
.snapshots/Build.gradle/: Src Main Java Com exemplo Main.Java  Src Teste Java Com Exemplo Pricipal  Texto Simples
.snapshots/Estilos.Min.CSS/: .Min.css
Ambiente/: Custom_Dataset.py  Estrutura do Dataset  Mnist_Classifier.py  Pandas  Pitão  Processamento_Audio_Torchaudio.py  Setup_environment.md  Tokenizer.py  Transformer_setup.py  tensorflow
Ambiente/Teste para GPU/: Código  Pitão
App.xsl/: Appcompat.xsl  Appcompat_bidi.xsl  Appcompat_detailed.xsl  Appcompat_detailed_txt.xsl  Appcompt_detailed-bidi_txt.xsl  Applications.xml  Apps.xml  appcompat_delailed_bidi.xsl
Frontend/: Código
Frontend/Public/: index.html
Frontend/Public/Src/: App.js  packege.json
Xml/: Migapp.xml  Offline.xml  Oscomps.xml  Reagente.xml
mais_aquivos_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_ai_project_agent.py  test_config_json.py  test_generate_pycache.py  test_xsl_transformations.py
